apps/dev/whoami/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: ns-whoami
spec: {}
status: {}
---
