apps/dev/whoami/deployments.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: dep-whoami
  namespace: ns-whoami
  labels:
    app: whoami

spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whomai
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80
