apps/dev/whoami/services.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: svc-whoami
  namespace: ns-whoami

spec:
  selector:
    app: whoami

  ports:
    - name: web
      port: 80
      targetPort: web
